--- a/index.html
+++ b/index.html
@@ -1,47 +1,61 @@
 <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Validation Form</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
+    <title>Code Pratice</title>
 </head>
 
 <body>
-    <div class="form_wrapper">
-        <div class="title_container">
-            <h1>Know About Me</h1>
-            <p>(Please fill in the blank box)</p>
-        </div>
-        <form id="form" class="form_container">
-            <div class="input_container">
-                <label>First Name:</label>
-                <input id="fname" type="text" placeholder="First name" size="30" />
+    <div class="form_container">
+        <form class="form">
+            <div class="form_title">Validation Forms</div>
+            <div class="info_box">
+                <div class="info_text">First Name:</div>
+                <input type="text" name="firstname" id="fname" />
             </div>
-            <div class="input_container">
-                <label>last Name:</label>
-                <input id="lname" type="text" placeholder="Last Name" size="30" />
+            <div class="info_box">
+                <div class="info_text">Last Name:</div>
+                <input type="text" name="lastname" id="lname" />
             </div>
-            <div class="input_container">
-                <label>My Email:</label>
-                <input id="email" type="email" placeholder="example@gmail.com" size="30" />
+            <div class="info_box">
+                <div class="info_text">Gender:</div>
+                <select class="gender_type" name="gender" id="gender_type">
+            <option value="male">Male</option>
+            <option value="Females">Female</option>
+          </select>
             </div>
-            <div class="input_container">
-                <label>My Phone #:</label>
-                <input id="phone" type="tel" placeholder="(1)888-88-8888" size="30" />
+            <div class="info_box">
+                <div class="info_text">Date Of Birth:</div>
+                <div class="birth_input_container">
+                    <input id="birth_month" type="number" size="1" maxlength="2" placeholder="01" /> /
+                    <input id="birth_day" type="number" size="3" maxlength="2" placeholder="01" /> /
+                    <input id="birth_year" type="number" size="3" maxlength="4" placeholder="2020" />
+                </div>
             </div>
-            <div class="input_container">
-                <label>About Me:</label>
-                <textarea class="text_field" name="myText" id="my_text" cols="55" rows="10"></textarea>
+            <div class="info_box">
+                <div class="info_text">Email Address:</div>
+                <div class="birth_input_container">
+                    <input id="email" type="email" required />
+                </div>
             </div>
-            <button type="submit" class="button1">Submit</button>
+            <div class="btn">
+                <button class="submit_btn">Submit</button>
+            </div>
         </form>
     </div>
-    <div class="blog_wrapper">
-        <div id="displayText"></div>
+    <div class="popup_message_container">
+        <div class="message_box">
+            <p class="message">Your Application is Complete!!!!</p>
+            <span class="close_btn">X</span>
+        </div>
     </div>
-    <script src="script.js "></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
